--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ section {
 
 /* Formatação da seção "Portfólio" */
 #portfolio {
+  background-color: rgb(223, 223, 223);
   text-align: left;
   margin: 20px;
   text-decoration: none;
